# sprint_8_ugc

./: .gitignore  README.md  env.dev.example  pyproject.toml
backend/: .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
backend/libs/: __init__.py
backend/libs/app/: app.py  logger.py  settings.py
backend/libs/db_research/: __init__.py  models.py
backend/libs/db_research/handlers/: __init__.py  events.py
backend/libs/db_research/repositories/: producer.py  producer_manager.py
backend/libs/db_research/services/: __init__.py  event_publisher.py  token.py
backend/nginx/: nginx.conf  site.conf
backend/tests/: .env.example  config.py
backend/tests/functional/: conftest.py
backend/tests/functional/models/: __init__.py  models.py
backend/tests/functional/src/: test_ugc.py
backend/tests/functional/testdata/: __init__.py  ugc_data.py
benchmark/: .env.example  .gitignore  README.md  benchmark.ipynb  docker-compose.dev.yml  docker-compose.yml  main.py
benchmark/core/: config.py
benchmark/data_management/: base_client.py  clickhouse.py  clickstream_chunk_generator.py
benchmark/shemas/: entity.py
benchmark/src/: clickhouse_write_data.py  config.py  generate_random_data.py
docs/deployment_diagrams/: as_is.plantuml  to_be.plantuml
etl/: .env.example  Dockerfile  Makefile  README.md  config.xml  docker-compose-kafka.yml  docker-compose.yml  kafka_producer.py  pyproject.toml  wait_for_it.sh
etl/libs/app/: settings.py
etl/libs/etl/: __init__.py  db_init.py  extractor.py  load.py  transform.py  utils.py
(+1 files in other folders)
